--- a/templates/remote/components/controls.html
+++ b/templates/remote/components/controls.html
@@ -23,13 +23,12 @@
 
   <!-- Secondary Controls -->
   <div class="control-row">
-    <button class="control-btn" id="shuffleBtn" title="Shuffle">
+    <button class="control-btn" id="deleteBtn" title="Delete Current Track">
       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <polyline points="16,3 21,3 21,8"></polyline>
-        <line x1="4" y1="20" x2="21" y2="3"></line>
-        <polyline points="21,16 21,21 16,21"></polyline>
-        <line x1="15" y1="15" x2="21" y2="21"></line>
-        <line x1="4" y1="4" x2="9" y2="9"></line>
+        <polyline points="3,6 5,6 21,6"></polyline>
+        <path d="m19,6v14a2,2 0 0,1-2,2H7a2,2 0 0,1-2-2V6m3,0V4a2,2 0 0,1,2-2h4a2,2 0 0,1,2,2v2"></path>
+        <line x1="10" y1="11" x2="10" y2="17"></line>
+        <line x1="14" y1="11" x2="14" y2="17"></line>
       </svg>
     </button>
     <button class="control-btn" id="likeBtn" title="Like">
