--- a/templates/sidebar_styles.html
+++ b/templates/sidebar_styles.html
@@ -41,6 +41,16 @@
     box-sizing: border-box;
   }
 
+  body {
+    display: flex;
+    background: var(--bg-primary);
+    color: var(--text-primary);
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
+    min-height: 100vh;
+  }
+
   .layout {
     display: flex;
     min-height: 100vh;
